<resources>
    <string name="app_name">IPH</string>
    <string name="folio_interno">*Folio Interno</string>
    <string name="folio_asignado_por_el_sistema">*Folio Asignado por el Sistema</string>
    <string name="numero_de_referencia">*Número de Referencia</string>
    <string name="estado">*Estado</string>
    <string name="institucion">*Institución</string>
    <string name="gobierno">*Gobierno</string>
    <string name="municipio_en_donde_se_entrega_el_iph">*Municipio en dónde se entrega el IPH</string>
    <string name="fecha_de_entrega_del_iph">Fecha IPH</string>
    <string name="hora_de_entrega_del_iph">Hora IPH</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="fecha_de_la_puesta_a_disposicion">Fecha de la Puesta a Disposición</string>
    <string name="hora_de_la_puesta_a_posposicion">Hora de la Puesta a Disposición</string>
    <string name="numero_de_expediente_en_caso_de_existir">Número de Expediente (En Caso de Existir)</string>
    <string name="apartado_1_1_fecha_y_hora_de_la_puesta_a_disposicion">Apartado 1.1 Fecha y hora de la puesta a disposición.</string>
    <string name="marque_con_una_x_el_o_los_anexos_entregados">Marque con una X el o los Anexos Entregados</string>
    <string name="anexo_a_detenciones">Anexo A. Detención(es)</string>
    <string name="descripcion_de_vehiculos">Anexo B. Descripción de Vehículos</string>
    <string name="no_se_entregan_anexos">No se Entregan Anexos</string>
    <string name="apartado_1_2_datos_de_quien_realiza_la_puesta_a_disposicion_primer_respondiente">Apartado 1.2 Datos de quien realiza la puesta a disposición/Primer respondiente</string>
    <string name="el_usuario_que_inicio_sesion_es_el_primer_respondiente">¿El usuario que inició sesión es el primer respondiente?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="nombres">Nombre(s)</string>
    <string name="institucion_entidad_federativa_o_municipio_de_adscripcion">Institución, entidad federativa o municipio de adscripción</string>
    <string name="en_que_unidad_arribo_al_lugar_de_la_intervencion">¿En qué unidad arribó al lugar de la intervención?</string>
    <string name="no_aplicaApodoAlias">Sin Apodo o Alias</string>
    <string name="no_aplicaUnidad">Sin Unidad de Arribo</string>
    <string name="apartado_1_3_datos_de_quien_recibe_la_puesta_a_disposicion">Apartado 1.3 Datos de quien recibe la puesta a disposición</string>
    <string name="fiscal_autoridad_que_recibe_la_puesta_a_disposicion">Fiscal/Autoridad que recibe la puesta a disposición</string>
    <string name="fiscalia_autoridad">Fiscalia/Autoridad</string>
    <string name="adscripcion">Adscripción</string>
    <string name="cargo">Cargo</string>
    <string name="apartado_2_1_conocimiento_de_la_probable_infraccion_administrativa_por_el_primer_respondiente">Apartado 2.1 Conocimiento de la probable infracción administrativa por el primer respondiente</string>
    <string name="como_se_entero_del_hecho">¿Cómo se Enteró del Hecho?</string>
    <string name="otro_especifique">Otro (Especifique)</string>
    <string name="_911_no_solo_en_caso_de_contar_con_el">911 No. (Solo en Caso de Contar con Él)</string>
    <string name="apartado_3_1_ubicacion_geografica">Apartado 3.1 Ubicación Geográfica</string>
    <string name="entidad">*Entidad</string>
    <string name="municipio_demarcacion_territorial">Municipio/Demarcación Territorial</string>
    <string name="calle_tramo_carretero">Calle/Tramo carretero</string>
    <string name="apartado_4_1_descripcion_de_los_hechos">Apartado 4.1 Descripción de los hechos y actuación de la autoridad</string>
    <string name="apartado_4_1_Instrucciones_descripcion_de_los_hechos">Relate cronológicamente las acciones realizadas durante su intervención desde el conocimiento del hecho, hasta su conclusión o la puesta a disposición. En su
caso, explique las circunstancias de modo, tiempo y lugar que motivaron cada uno de los niveles de contacto y la detención. Tome como base las siguientes
preguntas: ¿Quién? (personas), ¿Qué? (hechos), ¿Cómo? (circunstancias), ¿Cuándo? (tiempo) y ¿Dónde? (lugar).</string>
    <string name="subtitulo_apartado_A1">Apartado A.1 Fecha y hora de la detención </string>
    <string name="fecha_de_la_detencion">Fecha de la Detención</string>
    <string name="hora_de_la_detencion">Hora de la Detención</string>
    <string name="subtitulo_apartado_A2">Apartado A.2 Datos generales de la persona detenida</string>
    <string name="lblApodoDetenido">Apodo o Alias</string>
    <string name="lblGenero">Género</string>
    <string name="lblNacionalidad">Nacionalidad</string>
    <string name="lblNacionalidad_especifique">Especifique Nacionalidad</string>
    <string name="lblFechaNacimiento">Fecha de Nacimiento</string>
    <string name="lblEntidad">Entidad</string>
    <string name="lblMunicipio">Municipio</string>
    <string name="lblColonia">Colonia/Localidad</string>
    <string name="lblCalle">Calle/Tramo Carretero</string>
    <string name="lblNumeroExterior">Número Exterior</string>
    <string name="lblNumeroInterior">Número Interior</string>
    <string name="lblCodigoPostal">Código Postal</string>
    <string name="lblReferencias">Referencias del Lugar</string>
    <string name="subtitulo_apartado_A3">Apartado A.3 Datos del lugar del traslado de la persona detenida</string>
    <string name="subtitulo_apartado_A4">Apartado A.4 Datos del primer respondiente que realizó la detención</string>
    <string name="lblAdscripcion">Adscripción</string>
    <string name="lblCargo">¿Cuál es su Grado o Cargo?</string>
    <string name="lblFirma">Firma</string>
    <string name="lblTipoVehiculo">Tipo de Vehículo</string>
    <string name="lblProcedenciaVehiculo">Procedencia del Vehículo</string>
    <string name="lblMarcaVehiculo">Marca</string>
    <string name="lblSubmarcaVehiculo">Submarca</string>
    <string name="lblModeloVehiculo">Modelo</string>
    <string name="lblColorVehiculo">Color</string>
    <string name="lblUsoVehiculo">Uso</string>
    <string name="lblPlacaVehiculo">Placa/Matrícula</string>
    <string name="lblSerieVehiculo">Serie</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Informe Policial Homologado</string>
    <string name="nav_header_subtitle">Secretaría de Seguridad Pública</string>
    <string name="nav_header_desc">Secretaría de Seguridad Pública</string>
    <string name="navigation_delictivo">Delictivo</string>
    <string name="navigation_administrativo">Administrativo</string>
    <string name="navigation_emergencias">Emergencias</string>
    <string name="navigation_buscar">Buscar IPH</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_que_es">¿Qué Es?</string>
    <string name="menu_como_usarla">¿Cómo Usarla?</string>
    <string name="menu_protocolo_intervencion">Protocolo de Intervención</string>
    <string name="menu_terminos">Términos y Condiciones</string>
    <string name="menu_cerrarSession">Cerrar Sesión</string>
    <string-array name="arrayInstitucion">
        <item>--Selecciona--</item>
        <item>INSTITUTO FEDERAL DE DEFENSORÍA PÚBLICA</item>
        <item>PROCURADURÍA GENERAL DE LA REPÚBLICA (PGR)</item>
        <item>AGENCIA FEDERAL DE INVESTIGACIONES (AFI)</item>
        <item>CENTRO DE INVESTIGACIÓN Y SEGURIDAD NACIONAL (CISEN)</item>
    </string-array>
    <string-array name="arrayCargo">
        <item>--Selecciona--</item>
        <item>SUBTENIENTE</item>
        <item>TENIENTE</item>
        <item>COMISARIO</item>
        <item>INSPECTOR</item>
        <item>OFICIAL</item>
    </string-array>
    <string-array name="arrayUnidad">
        <item>--Selecciona--</item>
        <item>HL-045 DODGE CHARGER 2019 BLANCO CON AZUL</item>
        <item>HL-046 JEEP WRANGLER 2010 ROJO CON DESCAPOTABLE</item>
        <item>HL-047 DODGE CHARGER 2019 BLANCO CON AZUL</item>
        <item>HL-048 HONDA CIVIC 2020	BLANCO CON RAYAS</item>
        <item>HL-049 HONDA CIVIC 2020	BLANCO CON RAYAS</item>
    </string-array>
    <string-array name="arrayConocimientoInfraccion">
        <item>--Selecciona--</item>
        <item>LLAMADA 911</item>
        <item>PRESENCIAL</item>
        <item>BOTON DE EMERGENCIA</item>
        <item>DENUNCIA CIUDADANA</item>
    </string-array>
    <string-array name="arrayCalle">
        <item>--Selecciona--</item>
        <item>MIGUEL HIDALGO</item>
        <item>BENITO JUAREZ</item>
        <item>FRANCIA</item>
        <item>OLIVOS</item>
        <item>LANSEROS</item>
    </string-array>
    <string-array name="arrayColonias">
        <item>--Selecciona--</item>
        <item>JUAN C DORIA</item>
        <item>TUZOS</item>
        <item>SAN ANTONIO</item>
        <item>TULIPANES</item>
        <item>FORJADORES</item>
    </string-array>
    <string-array name="arrayMunicipios">
        <item>--Selecciona--</item>
        <item>ACTOPAN</item>
        <item>PACHUCA DE SOTO</item>
        <item>TEPEAPULCO</item>
        <item>TULANCINGO</item>
        <item>ZEMPOALA</item>
    </string-array>
    <string-array name="arrayEntidadFederativa">
        <item>--Selecciona--</item>
        <item>HIDALGO</item>
        <item>GUERRERO</item>
        <item>VERAZCRUZ</item>
        <item>ESTADO DE MÉXICO</item>
        <item>OAXACA</item>
    </string-array>
    <string-array name="arrayPadecimientos">
        <item>--Selecciona--</item>
        <item>DOLOR DE GARGANTA</item>
        <item>DOLOR DE OÍDO</item>
        <item>INFECCIÓN DE LAS VÍAS URINARIAS</item>
        <item>INFECCIÓN DE LA PIEL</item>
        <item>BRONQUITIS</item>
    </string-array>
    <string-array name="arrayGpoVulnerable">
        <item>--Selecciona--</item>
        <item>COMUNIDAD LGBTTTI</item>
        <item>MIGRANTES</item>
        <item>MUJERES</item>
        <item>PERSONA CON DISCAPACIDAD</item>
        <item>PERSONA INDIGENTE</item>
    </string-array>
    <string-array name="arrayLugarTraslado">
        <item>--Selecciona--</item>
        <item>MINISTERIO PÚBLICO</item>
        <item>C2 MUNICIPAL</item>
        <item>CERESO</item>
        <item>RETENCIÓN</item>
        <item>TORITO</item>
    </string-array>
    <string-array name="arrayMarcaVehiculos">
        <item>--Selecciona--</item>
        <item>ACURA</item>
        <item>CADILLAC</item>
        <item>DINA</item>
        <item>MCLAREN</item>
        <item>PORSCHE</item>
    </string-array>
    <string-array name="arraySubMarcaVehiculos">
        <item>--Selecciona--</item>
        <item>S8 SEDAN</item>
        <item>CONTINENTAL GT V8 S</item>
        <item>M6 COUPE</item>
        <item>ATS SEDAN</item>
        <item>AVEO</item>
    </string-array>
    <string-array name="arrayNacionalidad">
        <item>--Selecciona--</item>
        <item>MEXICANO</item>
        <item>OTRO</item>
    </string-array>
    <string-array name="arraySexo">
        <item>--Selecciona--</item>
        <item>HOMBRE</item>
        <item>MUJER</item>
    </string-array>
    <string name="validacion_notas">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ,.-(")\' ÁÉÍÓÚÜ 0123456789° \n \\ \/</string>
    <string name="validacion_nombre">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ ÁÉÍÓÚÜ</string>
    <string name="validacion_folios">ABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789</string>
    <string name="validacion_numero">0123456789</string>
</resources>