<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".delictivo.ui.fragmets.NoReferencia_Delictivo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/principalLinear"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <LinearLayout
                    android:id="@+id/lyFolioInternoDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblFolioInternoDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/folio_interno" />

                    <EditText
                        android:id="@+id/txtFolioInternoDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="25"
                        android:inputType="textCapCharacters"
                        android:digits="@string/validacion_notas"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyFolioSistemaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/lblFolioSistemaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/folio_asignado_por_el_sistema" />
                    <EditText
                        android:id="@+id/txtFolioSistemaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="21"
                        android:inputType="textCapCharacters"
                        android:digits="@string/validacion_folios"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyNoReferenciaDelictivo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/lblNoReferenciaDelictivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_de_referencia" />

                <EditText
                    android:id="@+id/txtNoReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21"
                    android:digits="@string/validacion_folios"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/secundarioLinear"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:id="@+id/lyeEstadoReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblEstadoReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estado" />

                    <EditText
                        android:id="@+id/txtEstadoReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GUERRERO"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyInstitucionReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/lblInstitucionReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/institucion" />
                    <Spinner
                        android:id="@+id/spInstitucionReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tercerLinear"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:id="@+id/lyGobiernoReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblGobiernoReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gobierno" />

                    <EditText
                        android:id="@+id/txtGobiernoReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="150"
                        android:digits="@string/validacion_nombre"
                        android:inputType="textCapCharacters"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionDone"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyMunicipioReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/lblMunicipioReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/municipio_en_donde_se_entrega_el_iph" />
                    <Spinner
                        android:id="@+id/spMunicipioReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cuartoLinear"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:id="@+id/lyFechaEntregaReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblFechaEntregaReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_de_entrega_del_iph" />

                    <EditText
                        android:id="@+id/txtFechaEntregaReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_calendar"
                        android:hint="DD/MM/AAAA" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyHoraEntregaReferenciaDelictivo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/lblHoraEntregaReferenciaDelictivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hora_de_entrega_del_iph" />
                    <EditText
                        android:id="@+id/txtHoraEntregaReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:drawableRight="@drawable/ic_time"
                        android:hint="HH:MM"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/quintoLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.10">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lyGuardarReferenciaDelictivo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="1"
                    android:layout_weight="0.5">
                    <Button
                        android:id="@+id/btnGuardarReferenciaDelictivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:drawableLeft="@drawable/ic_save_white"
                        android:background="@color/backgroud_header_toolbar"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/guardar_datos" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:layout_weight="0.10">
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>