<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".administrativo.ui.fragmets.ProbableInfraccion"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/principalLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lyHeaderProbableInfraccionAdministrativo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_section"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblProbableInfraccionAdministrativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apartado_2_1_conocimiento_de_la_probable_infraccion_administrativa_por_el_primer_respondiente"
                    android:textColor="@color/font" />
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/segundoLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lyHechoProbableInfraccionAdministrativo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblHechoProbableInfraccionAdministrativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/como_se_entero_del_hecho" />

                <Spinner
                    android:id="@+id/spHechoProbableInfraccionAdministrativo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyPuestaDisposicionAdministrativo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/lblOtroProbableInfraccionAdministrativo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otro_especifique" />

                <EditText
                    android:id="@+id/txtOtroProbableInfraccionAdministrativo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/validacion_notas"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:lines="1"
                    android:maxLength="250"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tercerLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl911FolioProbableInfraccionAdministrativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_911_no_solo_en_caso_de_contar_con_el" />

            <EditText
                android:id="@+id/txt911FolioProbableInfraccionAdministrativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/validacion_numero"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:enabled="false"/>
        </LinearLayout>




        <LinearLayout
            android:id="@+id/cuartoLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:orientation="vertical"
                android:weightSum="1"></LinearLayout>

            <LinearLayout
                android:id="@+id/lyGuardarProbableInfraccionAdministrativo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/btnGuardarProbableInfraccionAdministrativo"
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:background="@drawable/icn_save"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:orientation="vertical"
                android:weightSum="1"></LinearLayout>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>